name:                advent-of-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/advent-of-code#readme
license:             BSD3
license-file:        LICENSE
author:              Gustavo Franke
maintainer:          example@example.com
copyright:           2020 Gustavo Franke
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable advent-of-code
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
