cabal-version:       3.0
name:                advent-of-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/advent-of-code#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Gustavo Franke
maintainer:          example@example.com
copyright:           2020 Gustavo Franke
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable advent-of-code
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  ghc-options:         -Wall
  exposed-modules:     Inputs  
                     , Day1.Solution
                     , Day2.Solution
                     , Day3.Solution
                     , Day4.Solution
                     , Day5.Solution
                     , Day6.Solution
                     , Day7.Solution
                     , Day8.Solution
                     , Day9.Solution
                     , Day10.Solution
  build-depends:       base >= 4.7 && <5
                     , containers
                     , parsec
  hs-source-dirs:      src/year2020
  default-language:    Haskell2010

test-suite test
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.7 && <5
                     , doctest >= 0.16
  default-language:    Haskell2010