cabal-version:       3.0
name:                advent-of-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/advent-of-code#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Gustavo Franke
maintainer:          example@example.com
copyright:           2020 Gustavo Franke
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable advent-of-code
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  ghc-options:         -Wall
  exposed-modules:     Year2015.Day1.Solution
                     , Year2015.Day2.Solution
                     , Year2015.Day3.Solution
                     , Year2016.Day1.Solution
                     , Year2016.Day3.Solution
                     , Year2017.Day1.Solution
                     , Year2017.Day2.Solution
                     , Year2018.Day1.Solution
                     , Year2018.Day2.Solution
                     , Year2019.Day1.Solution
                     , Year2020.Inputs
                     , Year2020.Day1.Solution
                     , Year2020.Day2.Solution
                     , Year2020.Day3.Solution
                     , Year2020.Day4.Solution
                     , Year2020.Day5.Solution
                     , Year2020.Day6.Solution
                     , Year2020.Day7.Solution
                     , Year2020.Day8.Solution
                     , Year2020.Day9.Solution
                     , Year2020.Day10.Solution
                     , Year2020.Day11.Solution
                     , Year2020.Day12.Solution
                     , Year2020.Day13.Solution
                     , Year2020.Day14.Solution
                     , Year2020.Day15.Solution
                     , Year2020.Day16.Solution
  build-depends:       base >= 4.7 && <5
                     , containers
                     , parsec
                     , split
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.7 && <5
                     , doctest >= 0.16
  default-language:    Haskell2010